[package]
name = "s7"
version = "0.1.9"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A simple library that can be used to communicate with Siemens S7 family PLC devices"
keywords = ["siemens", "s7", "plc", "simatic"]
license-file = "LICENSE.md"
repository = "https://github.com/petar-dambovaliev/s7"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
custom-utils = "0.10.12"
log = "0.4.17"
pretty-hex = "0.3.0"
serde_json = "1.0.91"